# app/smart/models/order_items.go
@@ -11,7 +11,6 @@ type OrderItems struct {
 	Title        string `gorm:"column:title;type:varchar(50)" json:"title"`               // 订单项标题
 	BindTempLate string `gorm:"column:bindTempLate;type:varchar(50)" json:"bindTempLate"` // 绑定模板
 	Description  string `gorm:"column:description;type:varchar(256)" json:"description"`  // 订单项描述
-	Favorite     bool   `gorm:"default:false" json:"favorite"`                            // 是否为收藏项
 	Icon         string `gorm:"column:icon;type:varchar(50)" json:"icon"`                 // 订单项图标
 	CategoryID   uint   `gorm:"column:categoryId" json:"categoryId"`
 	Link         string `gorm:"column:link;type:varchar(256)" json:"link"`           // 连接到网页
