# docs/smart/smart_swagger.yaml
@@ -329,6 +329,34 @@ definitions:
       updatedAt:
         type: string
     type: object
+  dto.OrderCountByPeriodResponse:
+    properties:
+      orderStats:
+        description: 工单统计
+        items:
+          $ref: '#/definitions/dto.OrderCountStat'
+        type: array
+      submissionRanking:
+        description: 个人提交排行榜
+        items:
+          $ref: '#/definitions/dto.SubmissionRanking'
+        type: array
+    type: object
+  dto.OrderCountStat:
+    properties:
+      completed:
+        description: 已完成的
+        type: integer
+      date:
+        description: 日期
+        type: string
+      total:
+        description: 所有
+        type: integer
+      underWay:
+        description: 进行中的
+        type: integer
+    type: object
   dto.OrderItemsDeleteReq:
     properties:
       id:
@@ -351,9 +379,6 @@ definitions:
       description:
         description: 订单项描述
         type: string
-      favorite:
-        description: 是否为收藏项
-        type: boolean
       icon:
         description: 订单项图标
         type: string
@@ -386,9 +411,6 @@ definitions:
       description:
         description: 订单项描述
         type: string
-      favorite:
-        description: 是否为收藏项
-        type: boolean
       icon:
         description: 订单项图标
         type: string
@@ -453,6 +475,52 @@ definitions:
         type: integer
       updatedAt:
         type: string
+    type: object
+  dto.OrderRatingsResponse:
+    properties:
+      ratingRanking:
+        description: 个人评分排行榜
+        items:
+          $ref: '#/definitions/dto.RatingRanking'
+        type: array
+      ratingsStats:
+        description: 评分统计
+        items:
+          $ref: '#/definitions/dto.RatingStat'
+        type: array
+    type: object
+  dto.OrderStatisticsResponse:
+    properties:
+      completedOrders:
+        description: 已完结工单
+        type: integer
+      completionRate:
+        description: 完成率
+        type: integer
+      currentHandlerDayOverDay:
+        description: 当前处理工单日同比
+        type: number
+      currentHandlerOrders:
+        description: 当前处理的工单
+        type: integer
+      currentHandlerWeekOverWeek:
+        description: 当前处理工单周同比
+        type: number
+      dailyAverage:
+        description: 日均工单数
+        type: integer
+      pendingOrders:
+        description: 待办工单
+        type: integer
+      totalOrders:
+        description: 总工单数
+        type: integer
+      totalOrdersDayOverDay:
+        description: 总工单数日同比
+        type: number
+      totalOrdersWeekOverWeek:
+        description: 总工单数周同比
+        type: number
     type: object
   dto.OrderTaskDeleteReq:
     properties:
@@ -632,6 +700,24 @@ definitions:
       oldPassword:
         type: string
     type: object
+  dto.RatingRanking:
+    properties:
+      name:
+        description: 评价人
+        type: string
+      score:
+        description: 平均评分
+        type: number
+    type: object
+  dto.RatingStat:
+    properties:
+      average:
+        description: 平均评分
+        type: number
+      date:
+        description: 日期
+        type: string
+    type: object
   dto.ResetSysUserPwdReq:
     properties:
       createBy:
@@ -657,6 +743,15 @@ definitions:
     required:
     - dataScope
     - roleId
+    type: object
+  dto.SubmissionRanking:
+    properties:
+      name:
+        description: 创建人
+        type: string
+      total:
+        description: 提交数量
+        type: integer
     type: object
   dto.SysApiDeleteReq:
     properties:
@@ -1301,6 +1396,29 @@ definitions:
         description: 用户ID
         type: integer
     type: object
+  dto.UserFavoriteDeleteReq:
+    properties:
+      orderItemId:
+        description: 工单项ID
+        type: integer
+    required:
+    - orderItemId
+    type: object
+  dto.UserFavoriteInsertReq:
+    properties:
+      createBy:
+        type: integer
+      orderItemId:
+        description: 工单项ID
+        type: integer
+      updateBy:
+        type: integer
+      userID:
+        description: 用户id
+        type: integer
+    required:
+    - orderItemId
+    type: object
   dto.WorksNotifyReq:
     properties:
       createBy:
@@ -1599,9 +1717,6 @@ definitions:
       description:
         description: 订单项描述
         type: string
-      favorite:
-        description: 是否为收藏项
-        type: boolean
       icon:
         description: 订单项图标
         type: string
@@ -1709,6 +1824,24 @@ definitions:
     type: object
   go-admin_app_smart_models.StrucTure:
     additionalProperties: true
+    type: object
+  go-admin_app_smart_models.UserFavorites:
+    properties:
+      createBy:
+        type: integer
+      createdAt:
+        type: string
+      id:
+        type: integer
+      orderItemId:
+        description: 确保类型一致
+        type: integer
+      updateBy:
+        type: integer
+      updatedAt:
+        type: string
+      userId:
+        type: integer
     type: object
   go-admin_app_system_models.SysApi:
     properties:
@@ -2768,6 +2901,74 @@ paths:
       summary: 测试连接ExecMachine
       tags:
       - 历史任务
+  /api/v1/favorites:
+    delete:
+      consumes:
+      - application/json
+      description: 取消收藏
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserFavoriteDeleteReq'
+      responses:
+        "200":
+          description: '{"code": 200, "message": "取消成功"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - Bearer: []
+      summary: 取消收藏
+      tags:
+      - 收藏
+    get:
+      description: 获取用户收藏的工单项
+      parameters:
+      - description: 用户ID
+        in: query
+        name: userId
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/go-admin_app_smart_models.UserFavorites'
+                  type: array
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取用户收藏的工单项
+      tags:
+      - 收藏
+    post:
+      consumes:
+      - application/json
+      description: 添加收藏
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserFavoriteInsertReq'
+      responses:
+        "200":
+          description: '{"code": 200, "message": "添加成功"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - Bearer: []
+      summary: 添加收藏
+      tags:
+      - 收藏
   /api/v1/flow-manage:
     delete:
       description: 删除FlowManage
@@ -4429,6 +4630,51 @@ paths:
       summary: 设置配置
       tags:
       - 配置管理
+  /api/v1/statistics:
+    get:
+      description: 获取工单统计数据
+      responses:
+        "200":
+          description: '{"code": 200, "data": {...}}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.OrderStatisticsResponse'
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取工单统计数据
+      tags:
+      - 工单统计
+  /api/v1/statistics/orders/count:
+    get:
+      description: 根据周或月统计工单数量
+      parameters:
+      - description: period
+        enum:
+        - week
+        - month
+        in: query
+        name: period
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"code": 200, "data": {...}}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.OrderCountByPeriodResponse'
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取工单数量统计数据
+      tags:
+      - 工单统计
   /api/v1/sys-api:
     delete:
       description: 删除接口管理
@@ -5145,6 +5391,31 @@ paths:
       security:
       - Bearer: []
       summary: 退出登录
+  /ratings:
+    get:
+      consumes:
+      - application/json
+      description: 根据周或月统计评分数据
+      parameters:
+      - description: 统计周期，支持 week 或 month
+        in: query
+        name: period
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回评分统计数据
+          schema:
+            $ref: '#/definitions/dto.OrderRatingsResponse'
+        "500":
+          description: 查询评分统计数据失败
+          schema:
+            type: string
+      summary: 获取评分统计
+      tags:
+      - OrderStatistics
 securityDefinitions:
   Bearer:
     in: header
